--- a/Website/plugins/hiliter/hiliter-light.css
+++ b/Website/plugins/hiliter/hiliter-light.css
@@ -62,6 +62,8 @@
   float: right;
   font-size: xx-small;
   font-style: italic;
+  height: auto;
+  margin: 0 5px 0 0;
 }
 .raku-code pre.browser-hl {
   padding: 7px;
@@ -75,6 +77,9 @@
 .raku-code pre {
   background-color: #fafafa;
   color: #030303;
+  display: inline-block;
+  overflow: scroll;
+  width: 96%;
 }
 .raku-code .rakudoc-in-code {
   padding: 1.25rem 1.5rem;
